# rp2350-usb-write-blocker

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
docs/: DESIGN.en.md  DESIGN.md
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: sd_card_spi.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: crash.c
lib/waveshare_lcd/: CMakeLists.txt
lib/waveshare_lcd/Config/: DEV_Config.h
lib/waveshare_lcd/GUI/: GUI_Paint.c
lib/waveshare_lcd/LCD/: LCD_1in14_V2.c
scripts/: build.sh  flash.sh  setup.sh
src/: button.c  button.h  config.h  diag.c  diag.h  display.c  display.h  hw_config.c  logger.c  logger.h  main.c  mode.c  mode.h  msc_disk.c  readahead.c  readahead.h  tusb_config.h  usb_descriptors.c
